--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://cssicon.space/css/icons.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
+    <link rel="Stylesheet" href="./node_modules/xterm/lib/xterm.css">
     <title>gluonclient</title>
     <style>
       html,
@@ -24,8 +25,19 @@
         cursor: default;
       }
 
-      .icon, .icon:before, .icon:after, .icon i, .icon i:before, .icon i:after { 
+      .icon, .icon:before, .icon:after, .icon i, .icon i:before, .icon i:after {
         transition: all 0.4s ease;
+      }
+
+      .xterm-viewport {
+        display: none;
+        height: 80%;
+        width: 97%;
+        z-index: 5;
+      }
+
+      .xterm-helpers {
+        opacity: 0;
       }
     </style>
   </head>
