--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,16 @@
         transition: all 0.4s ease;
       }
 
-      .xterm-viewport {
-        display: none;
-        height: 80%;
-        width: 97%;
-        z-index: 5;
-      }
-
-      .xterm-helpers {
-        opacity: 0;
+      .button {
+        background-color: #29648A;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        cursor: pointer;
       }
     </style>
   </head>
